# poetry-cython-example-project

./: LICENSE  Makefile  README.md  build.py  pyproject.toml
src/adders/: addition.pyx  main.py
src/adders/experimental/: addition.pyx
tests/: test_addition.py
